# MasterThesis_code

./: .gitignore  README.md  experiments.sh  notes.txt
cache/: Cargo.toml  README.md
cache-client/: Cargo.toml
cache-client/src/: client_enclave.rs  lib.rs  main.rs
cache-client/src/benchmark/: main.rs
cache-requester/: CHANGELOG.md  README.md  project.clj
cache-requester/doc/: intro.md
cache-requester/src/cache_requester/: core.clj
cache-requester/test/cache_requester/: core_test.clj
cache/enclave-cache-lib/: Cargo.toml
cache/enclave-cache-lib/src/: dh_attestation.rs  lib.rs  msg_json.rs  msg_proto.rs  msg_proto_defs.proto  msg_proto_defs.rs  rust_crypto_dha.rs  rustcryptodhamsgs.rs
cache/src/: .cache_ds.rs  cache_ds.rs  cache_enclave.rs  lib.rs  main.rs
cache/src/benchmark/: main.rs
cache_subscriber/: Cargo.toml  README.md
cache_subscriber/src/: main.rs
framework/: Cargo.toml
framework/src/: cache.rs  handler.rs  lib.rs  main.rs  manager.rs  messaging.rs  sensor.rs
framework/tests/: lib.rs
msg-lib/: Cargo.toml  README.md
msg-lib/src/: dh_attestation.rs  lib.rs  msg_json.rs  msg_proto.rs  msg_proto_defs.proto  msg_proto_defs.rs  rust_crypto_dha.rs
safety_service/: Cargo.toml  README.md
safety_service/src/: main.rs
sensors/sensor-clj/: CHANGELOG.md  README.md  project.clj
sensors/sensor-clj/doc/: intro.md
sensors/sensor-clj/src/sensor_clj/: core.clj
sensors/sensor-clj/test/sensor_clj/: core_test.clj
sensors/sensor-rust/: Cargo.toml  README.md
sensors/sensor-rust/src/: main.rs
sgx-cache/: .gitignore  README.md  experiments.sh
sgx-cache/core_rust-crypto/: Cargo.toml  README.md
sgx-cache/core_rust-crypto/src/: aes.rs  aes_gcm.rs  aesni_helpers.c  blockmodes.rs  buffer.rs  cryptoutil.rs  digest.rs  ghash.rs  lib.rs  mac.rs  step_by.rs  symmetriccipher.rs  util.rs
sgx-cache/core_rust-protobuf/: Cargo.toml  README.md
sgx-cache/core_rust-protobuf/src/lib/: clear.rs  descriptor.rs  descriptorx.rs  error.rs  hex.rs  lazy.rs  pbcore.rs  protobuf.rs  repeated.rs  rt.rs  singular.rs  stream.rs  text_format.rs  unknown.rs
sgx-cache/core_rust-protobuf/src/lib/reflect/: accessor.rs  mod.rs
sgx-cache/interface/: Cargo.toml
sgx-cache/interface/src/: lib.rs
sgx-cache/rand/: Cargo.toml  README.md
sgx-cache/rand/.git-backup/: config  index  packed-refs
sgx-cache/rand/.git-backup/refs/heads/: core
sgx-cache/rust-core_collections/: Cargo.toml
sgx-cache/rust-core_collections/src/db1b1919baba8be48d997d9f70a6a5df7e31612a/hash/: map.rs
sgx-cache/rust-core_collections/src/fdeda33a9a7326ac4979aee5b0c9657298aebe59/hash/: map.rs
sgx-cache/rustc-serialize/: Cargo.toml
sgx-cache/rustc-serialize/src/: base64.rs  collection_impls.rs  hex.rs  json.rs  lib.rs  serialize.rs
sgx-cache/trusted/: Cargo.toml  build.sh  private.pem
sgx-cache/trusted/.cargo/: config  config-backup
sgx-cache/trusted/src/: lib.rs  sub_cache.rs
sgx-cache/trusted/src/msg_lib/: mod.rs  msg_json.rs  msg_proto.rs  msg_proto_defs.rs
sgx-cache/untrusted/: Cargo.toml  run.sh
sgx-cache/untrusted/src/: main.rs
vagrant/: Vagrantfile  rust.sh
