[package]
name = "enclave_cache"
version = "0.1.0"
authors = ["Stefan Wendt <stefanwendt@posteo.de>"]

[lib]
name = "enclave_cache"
path = "src/lib.rs"

[[bin]]
name = "enclave_cache_bin"
path = "src/main.rs"

[dependencies]
log = "0.3"
simple_logger = "0.4.0"
zmq = { git = "https://github.com/erickt/rust-zmq.git", rev = "87a6bd2" }
zmq-sys = { git = "https://github.com/erickt/rust-zmq.git", rev = "87a6bd2"  }

msg_lib = { path = "../msg-lib"}
