[package]
name = "msg_lib"
version = "0.1.0"
authors = ["Stefan Wendt <stefanwendt@posteo.de>"]

[dependencies]
log = "^0.3"
simple_logger = "0.4.0"
zmq = { git = "https://github.com/erickt/rust-zmq.git", rev = "87a6bd2" }
zmq-sys = { git = "https://github.com/erickt/rust-zmq.git", rev = "87a6bd2"  }
rust-crypto = "^0.2"
rand = "^0.3"
rustc-serialize = "^0.3"
protobuf = "^1.0"
