[package]
name = "sensor_rust"
version = "0.1.0"
authors = ["Stefan Wendt <stefanwendt@posteo.de>"]

[dependencies]
rand = "^0.3"
time = "^0.1"
log = "^0.3"
# env_logger = "*"
simple_logger = "^0.4"
rustc-serialize = "^0.3"
zmq = { git = "https://github.com/erickt/rust-zmq.git", rev = "87a6bd2" }
msg_lib = { path = "../../msg-lib" }
