[package]

name = "core_rust-protobuf"
version = "1.0.24"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
# modifications by Stefan Wendt <stefanwendt@posteo.de>
license = "MIT/Apache-2.0"
homepage = "https://github.com/stepancheg/rust-protobuf/"
repository = "https://github.com/stepancheg/rust-protobuf/"
description = """
Rust implementation of Google protocol buffers
"""

[lib]

name = "core_protobuf"
path = "src/lib/protobuf.rs"

[dependencies]
core_io = { version = "0.1", features = ["alloc","collections"] }
core_collections = { path = "../rust-core_collections" , features = ["rand"] }
spin = "0.4.2"   # MIT
