[package]
name = "untrusted"
version = "0.1.0"
authors = ["stefan"]

[[bin]]
name = "sgx-first-steps-untrusted"

[dependencies]
"sgxs" = "0.5.0"
"sgx-isa" = "0.1.0"
"enclave-interface" = "0.1.1"
chan-signal = "0.1.6"
interface = { path = "../interface" }
lazy_static = "0.1.*"
log = "0.3"
simple_logger = "0.4.0"
zmq = { git = "https://github.com/erickt/rust-zmq.git", rev = "87a6bd2" }
zmq-sys = { git = "https://github.com/erickt/rust-zmq.git", rev = "87a6bd2"  }

